--- a/src/components/topNavigation/TopNavigation.css
+++ b/src/components/topNavigation/TopNavigation.css
@@ -19,6 +19,7 @@
   display: flex;
   list-style: none;
   gap: 28px;
+  text-decoration: none;
 }
 
 .logo {
@@ -58,20 +59,18 @@
     height: 36.11px;
     margin-bottom: 17px;
   }
-
   .nav-links {
     display: flex;
     list-style: none;
     gap: 10px;
   }
-
   .nav-links.active {
     display: flex;
     flex-direction: column;
   }
 }
 
-@media (max-width: 375px) {
+@media (max-width: 376px) {
   .toggle-menu {
     display: block;
     cursor: pointer;
@@ -82,7 +81,6 @@
     height: 36.11px;
     margin-bottom: 17px;
   }
-
   .nav-links {
     display: none;
     position: absolute;
@@ -92,7 +90,6 @@
     background: #6b3cc9;
     z-index: 1;
   }
-
   .nav-links.active {
     display: flex;
     flex-direction: column;
